# lotus-racing

./: .gitignore  .mcp.json  Alignment-and-Handling-Guide.md  CLAUDE.md  Lotus.md  README.md  VIR-Full-Course-Guide.md  catalyst-download-manager.sh  pyproject.toml
.github/workflows/: release.yml
Lotus/: Alignment-and-Handling-Guide.md  Car.md  Driver-Improvement-Guide.md  Suspension-Tuning-Guide.md  garmin-catalyst-data-extraction.md
Vette/: Aero-Guide.md  Alignment-and-Handling-Guide.md  Brake-Guide.md  Car.md  VIR-Full-Course-Guide.md  Vette.md  c8-z51-track-setup-research.md
catalyst-app/: .gitignore  .mcp.json  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
catalyst-app/coaching/: 2026-05-29-overview.md
catalyst-app/src/garmin/: agentHarness.ts  analysisData.ts  catalystClient.ts  (+11 more)
catalyst_gui/: __init__.py  __main__.py  app.py  paths.py  profiles.py  state.py  workers.py
catalyst_gui/pages/: brief.py  briefs.py  cars.py  home.py  login.py  sessions.py
coaching/: 2026-05-28-corner.md  2026-05-28-lotus-overview-report.html  2026-05-28-overview.md  2026-05-29-overview.md  README.md
coaching/2026-05-28-lotus-overview-data/: best_lap_trace.csv  corner_stats.csv
coaching/2026-05-28-vette-overview-data/: laps.csv  segment_splits.csv  sessions.csv
garmin/: .gitignore  README.md  catalyst_client.py  config.example.json  decode_performance.py  detect_corners.py  html_report.py  load_to_db.py  prompt_pack.py  requirements.txt
tracks/: vir-full-course.yaml  vir-grand-west-course.yaml  vir-north-course.yaml
(+45 files in other folders)
