[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-coach"
version = "0.1.0"
description = "Garmin Catalyst data pipeline + visualization GUI for HPDE coaching prep"
requires-python = ">=3.9"
dependencies = [
    "garth>=0.4.45",
    "requests>=2.31",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "PySide6>=6.6",
]

[project.scripts]
catalyst-gui = "catalyst_gui.__main__:main"
catalyst-fetch = "garmin.catalyst_client:main"
catalyst-decode = "garmin.decode_performance:main"
catalyst-load = "garmin.load_to_db:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["catalyst_gui*", "garmin*"]
